--- a/practice 03/index.html
+++ b/practice 03/index.html
@@ -15,79 +15,92 @@
 </head>
 
 <body>
-    <div class="our_partners__wrapper">
-        <section class="our_parners container">
 
-            <h2 class="our_parners__title visually-hidden">Our partners</h2>
+    <div class="mastheader_section__wrapper">
+        <section class="mastheader_section container">
 
-            <ul class="our_parners__partners_list">
-                <li class="our_partners__partner">
-                    <img src="./img/avatar.png" alt="avatar" class="partner_avatar">
-                    <h3 class="partner_name">Jonathon Doe</h3>
-                    <p class="partner_position">Co Founder</p>
-                    <p class="partner_cite">“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis
-                        vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
-                </li>
+            <header class="mastheader">
 
-                <li class="our_partners__partner">
-                    <img src="./img/avatar.png" alt="avatar" class="partner_avatar">
-                    <h3 class="partner_name">Jonathon Doe</h3>
-                    <p class="partner_position">Co Founder</p>
-                    <p class="partner_cite">“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis
-                        vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
-                </li>
+                <nav class="mastheader_nav">
+                    <ul class="nav_list">
+                        <li class="nav_list_item"><a href="#" class="item_link">Home</a></li>
+                        <li class="nav_list_item"><a href="#" class="item_link">About us</a></li>
+                        <li class="nav_list_item"><a href="#" class="item_link">Contacts</a></li>
+                        <li class="nav_list_item"><a href="#" class="item_link">Category</a></li>
+                    </ul>
+                </nav>
 
-                <li class="our_partners__partner">
-                    <img src="./img/avatar.png" alt="avatar" class="partner_avatar">
-                    <h3 class="partner_name">Jonathon Doe</h3>
-                    <p class="partner_position">Co Founder</p>
-                    <p class="partner_cite">“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis
-                        vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
-                </li>
-
-            </ul>
-
-            <footer class="our_partners__footer">
-
-                <ul class="our_partners__logos_list">
-                    <li class="logos_list__item"><img src="./img/partner-logo-1.png" alt="logo" class="logo"></li>
-                    <li class="logos_list__item"><img src="./img/partner-logo-4.png" alt="logo" class="logo"></li>
-                    <li class="logos_list__item"><img src="./img/partner-logo-5.png" alt="logo" class="logo"></li>
-                    <li class="logos_list__item"><img src="./img/partner-logo-7.png" alt="logo" class="logo"></li>
-                    <li class="logos_list__item"><img src="./img/partner-logo-1.png" alt="logo" class="logo"></li>
-                </ul>
-
-            </footer>
-
-        </section>
-    </div>
-
-    <div class="my_featers__wrapper">
-        <section class="my_featers container">
-
-            <header class="my_featers__header">
-                <p class="my_featers__subtitle">new features</p>
-                <h2 class="my_featers__title">Some awesone features</h2>
             </header>
 
-            <p class="my_featers__descr">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
-                Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada
-                magn. Vestibulum felis euismod semper.</p>
+            <div class="hero_section">
+                <h1 class="hero_section__title">There is no other platforms for you as like </h1>
+                <a href="#" class="hero_section__link">Try now</a>
+                <p class="hero_section__link_description">* No need to add cards details</p>
+            </div>
 
-            <div class="my_featers__img_cont">
-                <img src="./img/browser.png" alt="img" class="my_featers__img">
+        </section>
+
+    </div>
+
+    <div class="new_design__wrapper">
+        <section class="new_design container">
+
+            <div class="new_design__description">
+
+                <span class="new_design__subtitle">NEW DESIGN</span>
+                <h2 class="new_design__title">There is no other platforms for you as like <span>....</span></h2>
+                <p class="new_design__text">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis
+                    vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.
+                    Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.
+
+                    Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non
+                    metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a
+                    pharetra augue.</p>
+            </div>
+
+            <div class="new_design__img_container">
+                <img src="./img//section2_img.jpg" alt="super_alt" class="new_design__img">
             </div>
 
         </section>
     </div>
 
 
+    <div class="our_features__wrapper">
+        <section class="our_features container">
 
+            <header class="our_features__header">
+                <span class="our_features__sub_title">new features</span>
+                <h2 class="our_features__title">Some awesone features</h2>
+            </header>
 
+            <ul class="our_features__feature_list">
 
+                <li class="feature_list__item">
+                    <i class="feature_list__item_icon fab fa-facebook-square"></i>
 
+                    <h3 class="feature_list__item_title">Some awesone features</h3>
+                    <p class="feature_list__item_text">Donec sed odio dui. Aenean lacinia bibendum nulla sed
+                        consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+                </li>
 
+                <li class="feature_list__item">
+                    <i class="feature_list__item_icon fab fa-facebook-square"></i>
+                    <h3 class="feature_list__item_title">Some awesone features</h3>
+                    <p class="feature_list__item_text">Donec sed odio dui. Aenean lacinia bibendum nulla sed
+                        consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+                </li>
 
+                <li class="feature_list__item">
+                    <i class="feature_list__item_icon fab fa-facebook-square"></i>
+                    <h3 class="feature_list__item_title">Some awesone features</h3>
+                    <p class="feature_list__item_text">Donec sed odio dui. Aenean lacinia bibendum nulla sed
+                        consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+                </li>
+
+            </ul>
+        </section>
+    </div>
 </body>
 
 </html>
