--- a/practice 05/index.html
+++ b/practice 05/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
@@ -14,149 +15,142 @@
 </head>
 
 <body>
+
     <div class="masthead-wrapper">
-            <section class="masthead section">
+        <section class="masthead section">
 
-                <header class="masthead__header ">
+            <header class="masthead__header clearfix">
 
-                    <h1 class="logo">
-                        <a href="#" class="logo-link">
-                            <img src="img/tajam.png" alt="tajam-logo" width="125px" height="50px">
-                        </a>
-                        <span class="visuallyhidden">Tajam</span>
-                    </h1>
+                <h1 class="logo">
+                    <a href="#" class="logo-link">
+                        <img src="img/tajam.png" alt="tajam-logo" width="125px" height="50px">
+                    </a>
+                    <span class="visually-hidden">Tajam</span>
+                </h1>
 
 
-                    <nav class="header__header-nav">
-                        <ul class="header-nav__nav-list">
-                            <li class="nav-list__nav-item">
-                                <a href="#" class="nav-item__link">HOME </a>
-                            </li>
-                            <li class="nav-list__nav-item">
-                                <a href="#" class="nav-item__link">ABOUT </a>
-                            </li>
-                            <li class="nav-list__nav-item">
-                                <a href="#" class="nav-item__link">EXPERTISE </a>
-                            </li>
-                            <li class="nav-list__nav-item">
-                                <a href="#" class="nav-item__link">TEAMS </a>
-                            </li>
-                            <li class="nav-list__nav-item">
-                                <a href="#" class="nav-item__link">WORKS </a>
-                            </li>
-                            <li class="nav-list__nav-item">
-                                <a href="#" class="nav-item__link">PEOPLE SAY </a>
-                            </li>
-                            <li class="nav-list__nav-item">
-                                <a href="#" class="nav-item__link">CONTACT</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </header>
+                <nav class="header__header-nav">
+                    <ul class="header-nav__nav-list clearfix">
+                        <li class="nav-list__nav-item">
+                            <a href="#" class="nav-item__link">home </a>
+                        </li>
+                        <li class="nav-list__nav-item">
+                            <a href="#" class="nav-item__link">about </a>
+                        </li>
+                        <li class="nav-list__nav-item">
+                            <a href="#" class="nav-item__link">expertise </a>
+                        </li>
+                        <li class="nav-list__nav-item">
+                            <a href="#" class="nav-item__link">teams </a>
+                        </li>
+                        <li class="nav-list__nav-item">
+                            <a href="#" class="nav-item__link">works </a>
+                        </li>
+                        <li class="nav-list__nav-item">
+                            <a href="#" class="nav-item__link">people say </a>
+                        </li>
+                        <li class="nav-list__nav-item">
+                            <a href="#" class="nav-item__link">contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
 
-                <section class="masthead__banner">
-                    <h2 class="banner__title">We Are Awesome Creative Agency</h2>
-                    <p class="banner__discript text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
-                        velit auctor aliquet. Aenean sollicitudin,
-                        lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed
-                        odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
-                    <a href="#" class="banner__button link-button">LEARN MORE</a>
-                </section>
-                
+            <div class="masthead__banner">
+                <h2 class="banner__title">We Are Awesome Creative Agency</h2>
+                <p class="banner__discript">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+                    velit auctor aliquet. Aenean sollicitudin,
+                    lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed
+                    odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
+                <!-- <a href="#" class="banner__button">learn more</a> -->
+                <br>
+                <button class="banner__btn">learn more </button>
+            </div>
 
-                <ul class="masthead__pagn-list">
-                    <li class="pagn-list__pagn-item">
-                        <a href="#"></a>
-                    </li>
-                    <li class="pagn-list__pagn-item">
-                        <a href="#"></a>
-                    </li>
-                    <li class="pagn-list__pagn-item">
-                        <a href="#"></a>
-                    </li>
-                    <li class="pagn-list__pagn-item">
-                        <a href="#"></a>
-                    </li>
-                </ul>
-            </section>
+
+            <ul class="masthead__pagn-list">
+                <li class="pagn-list__pagn-item">
+                    <a href="#"></a>
+                </li>
+                <li class="pagn-list__pagn-item">
+                    <a href="#"></a>
+                </li>
+                <li class="pagn-list__pagn-item">
+                    <a href="#"></a>
+                </li>
+                <li class="pagn-list__pagn-item">
+                    <a href="#"></a>
+                </li>
+            </ul>
+        </section>
     </div>
 
     <div class="services-wrapper">
-            <section class="section">
+        <section class="section services-section">
 
-                <header class="services__services-header">
-                    <h2 class="services-header__title title">EXPERTISE</h2>
-                    <p class="services-header__discript title">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
-                </header>
+            <!-- <header class="services__services-header">
+                <h2 class="services-header__title title">EXPERTISE</h2>
+                <p class="services-header__discript title">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+            </header> -->
 
 
-                <ul class="services__services-list">
+            <ul class="services__services-list clearfix">
+                <li class="services-list__services-item">
+                    <div class="services-item__services-card">
+                        <i class="fab fa-google"></i>
+                        <h4 class="services-card__title">WEB DESIGN</h4>
+                        <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
+                            gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </div>
+                </li>
+                <li class="services-list__services-item">
+                    <div class="services-item__services-card">
+                        <i class="fab fa-google"></i>
+                        <h4 class="services-card__title">WEB DESIGN</h4>
+                        <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
+                            gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </div>
+                </li>
+                <li class="services-list__services-item">
+                    <div class="services-item__services-card">
+                        <i class="fab fa-google"></i>
+                        <h4 class="services-card__title">WEB DESIGN</h4>
+                        <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
+                            gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </div>
+                </li>
+                <li class="services-list__services-item">
+                    <div class="services-item__services-card">
+                        <i class="fab fa-google"></i>
+                        <h4 class="services-card__title">WEB DESIGN</h4>
+                        <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
+                            gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </div>
+                </li>
+                <li class="services-list__services-item">
+                    <div class="services-item__services-card">
+                        <i class="fab fa-google"></i>
+                        <h4 class="services-card__title">WEB DESIGN</h4>
+                        <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
+                            gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </div>
+                </li>
+                <li class="services-list__services-item">
+                    <div class="services-item__services-card">
+                        <i class="fab fa-google"></i>
+                        <h4 class="services-card__title">WEB DESIGN</h4>
+                        <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
+                            gravida nibh vel velit auctor aliquet Aenean.</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
 
-                    <li class="services-list__services-item ">
-                        <div class="services-item__services-card">
-                            <svg class="services-card__icon">
-                                <use xlink:href="svg/sprite.svg#play_butt"></use>
-                            </svg>
-                            <h4 class="services-card__title">WEB DESIGN</h4>
-                            <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
-                                gravida nibh vel velit auctor aliquet Aenean.</p>
-                        </div>
-                    </li>
-
-                    <li class="services-list__services-item">
-                        <div class="services-item__services-card">
-                            <svg class="services-card__icon">
-                                <use xlink:href="svg/sprite.svg#play_butt"></use>
-                            </svg>
-                            <h4 class="services-card__title">WEB DESIGN</h4>
-                            <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
-                                gravida nibh vel velit auctor aliquet Aenean.</p>
-                        </div>
-                    </li>
-                    <li class="services-list__services-item">
-                        <div class="services-item__services-card">
-                            <svg class="services-card__icon">
-                                <use xlink:href="svg/sprite.svg#play_butt"></use>
-                            </svg>
-                            <h4 class="services-card__title">WEB DESIGN</h4>
-                            <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
-                                gravida nibh vel velit auctor aliquet Aenean.</p>
-                        </div>
-                    </li>
-                    <li class="services-list__services-item">
-                        <div class="services-item__services-card">
-                            <svg class="services-card__icon">
-                                <use xlink:href="svg/sprite.svg#play_butt"></use>
-                            </svg>
-                            <h4 class="services-card__title">WEB DESIGN</h4>
-                            <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
-                                gravida nibh vel velit auctor aliquet Aenean.</p>
-                        </div>
-                    </li>
-                    <li class="services-list__services-item">
-                        <div class="services-item__services-card">
-                            <svg class="services-card__icon">
-                                <use xlink:href="svg/sprite.svg#play_butt"></use>
-                            </svg>
-                            <h4 class="services-card__title">WEB DESIGN</h4>
-                            <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
-                                gravida nibh vel velit auctor aliquet Aenean.</p>
-                        </div>
-                    </li>
-                    <li class="services-list__services-item">
-                        <div class="services-item__services-card">
-                            <svg class="services-card__icon">
-                                <use xlink:href="svg/sprite.svg#play_butt"></use>
-                            </svg>
-                            <h4 class="services-card__title">WEB DESIGN</h4>
-                            <p class="services-card__discript text">This is Photoshop's version of Lorem Ipsum. Proin
-                                gravida nibh vel velit auctor aliquet Aenean.</p>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-    
     </div>
+
+
+
+
 </body>
 
 </html>
